# adk-redis

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: agent-memory-server-setup.md  integration-guide.md  redis-setup.md
examples/memory_tools_comparison/: metrics.py  shared_scenarios.py  with_tools.py
examples/redis_memory/: README.md  main.py
examples/redis_memory/redis_memory_agent/: __init__.py  agent.py
examples/redis_search_tools/: README.md  load_data.py  schema.yaml
examples/redis_search_tools/redis_search_tools_agent/: __init__.py  agent.py
examples/semantic_cache/: .env.example  README.md  main.py
examples/semantic_cache/semantic_cache_agent/: __init__.py  agent.py
examples/simple_redis_memory/: README.md  demo_conversation.py  main.py
examples/simple_redis_memory/redis_memory_agent/: __init__.py  agent.py
examples/travel_agent_memory/: .cleanup_reference.md  .env.example  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  RUNNING.md  STATUS.md  compare_journey.py  docker-compose.yml  run_with_logs.sh  simple_demo.py  test_tool_direct.py  test_tools_simple.py  travel_scenarios.py
examples/travel_agent_memory/evaluation/: README.md  test_config.json  travel_agent_eval.test.json
examples/travel_agent_memory/seed_data/: seed_script.py  users.json
examples/travel_agent_memory/seed_data/.adk/: session.db
examples/travel_agent_memory/tools/: __init__.py  calendar_export.py  itinerary_planner.py  tavily_search.py
examples/travel_agent_memory/travel_agent/: __init__.py  agent.py
examples/travel_agent_memory/travel_agent/.adk/: session.db
examples/travel_agent_memory_hybrid/: .env.example  README.md  docker-compose.yml  main.py
examples/travel_agent_memory_hybrid/docs/: ARCHITECTURE.md
examples/travel_agent_memory_hybrid/seed_data/: seed_script.py
examples/travel_agent_memory_hybrid/tools/: __init__.py  calendar_export.py  itinerary_planner.py  tavily_search.py
examples/travel_agent_memory_hybrid/travel_agent/: __init__.py  agent.py
examples/travel_agent_memory_tools/: README.md
examples/travel_agent_memory_tools/seed_data/: seed_script.py  users.json
examples/travel_agent_memory_tools/tools/: calendar_export.py  itinerary_planner.py
examples/travel_agent_memory_tools/travel_agent/: agent.py
nitin_docs/: RELEASE_NOTES_0.0.1.md
scripts/: setup-agent-memory-server.sh  start-redis.sh
src/adk_redis/: __init__.py  _version.py
src/adk_redis/cache/: __init__.py  _provider.py  callbacks.py  llm_cache.py  tool_cache.py
src/adk_redis/memory/: __init__.py  _utils.py  long_term_memory.py
src/adk_redis/sessions/: __init__.py  working_memory.py
src/adk_redis/tools/: __init__.py
src/adk_redis/tools/memory/: __init__.py  _base.py  _config.py  create.py  delete.py  prompt.py  search.py  update.py
src/adk_redis/tools/search/: __init__.py  _base.py  _config.py  hybrid.py  range.py  text.py  vector.py
tests/: conftest.py  test_imports.py  test_version.py
tests/memory/: __init__.py  test_long_term_memory.py
tests/sessions/: __init__.py  test_working_memory.py
tests/tools/: __init__.py  test_hybrid_search.py  test_range_search.py  test_text_search.py  test_vector_search.py
