[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redisvl-adk"
version = "0.1.0"
description = "Redis Vector Library integration for Google Agent Development Kit (ADK)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Redis Inc.", email = "redis@redis.com"}
]
keywords = ["redis", "vector", "search", "adk", "agent", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "redisvl>=0.3.0",
    "google-adk>=0.1.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

openai = ["openai>=1.0.0"]
cohere = ["cohere>=4.0.0"]
huggingface = ["sentence-transformers>=2.0.0"]

[project.urls]
Homepage = "https://github.com/redis-applied-ai/redisvl-adk-agents"
Documentation = "https://github.com/redis-applied-ai/redisvl-adk-agents/tree/main/docs"
Repository = "https://github.com/redis-applied-ai/redisvl-adk-agents"
Issues = "https://github.com/redis-applied-ai/redisvl-adk-agents/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["redisvl_adk*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
